# project1

./: .gitignore  Dockerfile  README.md  amplify.yml  project_structure.py  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py  main1.py
backend/src/config/: config_manager.py
backend/src/database/: db_executor_aws.py  db_manager_aws.py
backend/src/gateway/: api_gateway_handler.py  lambda_message_processor.py
backend/src/nlp/: async_query_matcher.py  groq_pattern_matcher.py  query_matcher.py
backend/src/query/: query_mappings.py
backend/src/speech_text_speech_system/: openai_tts_voice_assistant.py  openai_tts_voice_assistant1.py  voice_assistant_pyttsx3.py
backend/src/voice/: assistant.py  assistant_pcm.py  previous_assistant.py
backend/src/websocket/: connection.py
frontend/: jsconfig.json  next.config.js  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: ChatInterface.jsx  ExampleQueries.jsx  ResultsTable.jsx  Sidebar.jsx  SqlDisplay.jsx  TapToSpeak.jsx
frontend/src/lib/: useAudioPlayback.js  useAudioRecording.js  useWebSocket.js
old_frontend/static/css/: styles.css
old_frontend/static/js/: previous_app.js
old_frontend/templates/: index1.html
src/: main.py  main1.py
src/config/: config_manager.py
src/database/: db_executor.py  db_manager.py
src/nlp/: groq_pattern_matcher.py  query_matcher.py  query_matcher_aws.py
src/query/: query_mappings.py
src/speech_text_speech_system/: openai_tts_voice_assistant.py  openai_tts_voice_assistant1.py  voice_assistant_pyttsx3.py
src/static/js/: app.js  app_pcm.js
src/templates/: index.html
src/utils/: logger.py
src/voice/: assistant.py  assistant_pcm.py  previous_assistant.py
